Admin panel branding operations and area usage

--- a/Frontends/CarBook_WebUI/CarBook_WebUI.csproj
+++ b/Frontends/CarBook_WebUI/CarBook_WebUI.csproj
@@ -30,4 +30,9 @@
     <ProjectReference Include="..\CarBook_Dto\CarBook_Dto.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
 </Project>
